[gd_scene load_steps=17 format=3 uid="uid://48qfybefw3aa"]

[ext_resource type="Script" uid="uid://ksa7we4bu0e8" path="res://card.gd" id="1_t3xw1"]
[ext_resource type="Resource" uid="uid://b1jsm7umavvtr" path="res://resources/hit.tres" id="2_b2ymv"]
[ext_resource type="Shader" uid="uid://em1qhaea32f4" path="res://shaders/combined.gdshader" id="3_g82jn"]
[ext_resource type="Shader" uid="uid://dit7pw65mjhr" path="res://shaders/burn.gdshader" id="3_hu1q2"]
[ext_resource type="Texture2D" uid="uid://col3t6i8hj81b" path="res://art/pixel card back.png" id="4_2p27k"]
[ext_resource type="Texture2D" uid="uid://clgrttyyuvr7e" path="res://art/damage.png" id="4_m3xde"]
[ext_resource type="Texture2D" uid="uid://ci01gglxn7rpx" path="res://art/shield.png" id="5_icxvi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxrx6"]
size = Vector2(94, 118)

[sub_resource type="Animation" id="Animation_w6tm1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6tt1t"]
resource_name = "flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"card_flip"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_4aoah"]
resource_name = "flip_to_deck"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"card_flip"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83wxg"]
_data = {
&"RESET": SubResource("Animation_w6tm1"),
&"flip": SubResource("Animation_6tt1t"),
&"flip_to_deck": SubResource("Animation_4aoah")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hk702"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mn6r0"]
noise = SubResource("FastNoiseLite_hk702")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mxslp"]
shader = ExtResource("3_hu1q2")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_mn6r0")
shader_parameter/burn_amount = 0.0
shader_parameter/burn_colour = Color(0.8, 0.4, 0.2, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u6qec"]
shader = ExtResource("3_g82jn")
shader_parameter/fov = 60.0
shader_parameter/x_rot = 0.0
shader_parameter/y_rot = 0.0
shader_parameter/inset = 0.0
shader_parameter/mouse_screen_pos = Vector2(0, 0)
shader_parameter/hovering = 0.0
shader_parameter/rand_trans_power = 1.0
shader_parameter/rand_seed = 0.0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/width = 1.2
shader_parameter/pattern = 0
shader_parameter/inside = false

[node name="Card" type="Area2D"]
script = ExtResource("1_t3xw1")
card_info = ExtResource("2_b2ymv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_uxrx6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_83wxg")
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]

[node name="CanvasLayer" type="CanvasGroup" parent="BackBufferCopy"]
material = SubResource("ShaderMaterial_mxslp")
use_mipmaps = true

[node name="Sprite2D" type="Sprite2D" parent="BackBufferCopy/CanvasLayer"]
texture_filter = 1
material = SubResource("ShaderMaterial_u6qec")
texture = ExtResource("4_2p27k")

[node name="Name" type="Label" parent="BackBufferCopy/CanvasLayer"]
offset_left = -16.0
offset_top = -18.0
offset_right = 624.0
offset_bottom = 202.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(0.533333, 0, 0.0823529, 1)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Damage" type="Sprite2D" parent="BackBufferCopy/CanvasLayer"]
position = Vector2(10, 18)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_m3xde")

[node name="DamageLabel" type="Label" parent="BackBufferCopy/CanvasLayer/Damage"]
offset_left = -50.0001
offset_top = -50.0
offset_right = 49.9999
offset_bottom = 50.0
theme_override_font_sizes/font_size = 75
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="BackBufferCopy/CanvasLayer"]
position = Vector2(-10, 18)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_icxvi")

[node name="ShieldLabel" type="Label" parent="BackBufferCopy/CanvasLayer/Shield"]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 70
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
